long >> int